[package]
name = "hdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "*", features = ["serde"]}
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", features = ["std"] } 
simplelog = "*"
threadpool = "*"

[dev-dependencies]
serial_test = "*"
